--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="revisit-after" content="2 days">
     <link rel="shortcut icon" href="assets/img/favicon.png">
 
-    <title>Scoop Themes | Coming Soon Template</title>
+    <title>Aliyah R. Cottle | Web Design</title>
 
     <!-- Bootstrap -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -56,13 +56,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-12 col-lg-12">
-                    <img src="assets/img/logo.png" alt="Scoop Themes Logo">
-                    <br/>
-                    <br/>
-                    <h2 class="subtitle">We're working hard to launch our website and we'll be ready very soon</h2>
+                    <h1>Aliyah R. Cottle</h1>
+                    <h2 class="subtitle">I'm working hard to launch the new website and will be ready very soon</h2>
                     <br/>
              
-                    <form class="form-inline validate signup" action="http://scoopthemes.us8.list-manage.com/subscribe/post-json?u=c535e62cabdc2bfeb87bff6de&amp;id=d969b07f82&c=?" method="get" role="form">
+                    <form class="form-inline validate signup" action="formspree.io/aliyahrcottle@gmail.com" method="get" role="form">
                         <div class="form-group">
                             <input type="email" class="form-control" name="EMAIL" id="exampleInputEmail1" placeholder="Enter your email address">
                         </div>
@@ -70,24 +68,19 @@
                     </form>
                     <br/>
                 </div>
+                <!--
                 <div class="col-sm-12 align-center">
-                    <ul class="social-network social-circle">
+                     <ul class="social-network social-circle">
                         <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a>
+                        <li><a href="https://twitter.com/AliyahCottle" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a>
                         </li>
                         <li><a href="#" class="icoGit" title="Github"><i class="fa fa-github"></i></a>
                         </li>
                         <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a>
                         </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-6 col-lg-offset-3">
-                    <p class="copyright">Copyright &copy; 2014 - <a href="http://scoopthemes.com">ScoopThemes.com</a>
-                    </p>
-                </div>
+                    </ul> 
+                </div> -->
             </div>
         </div>
     </div>
